Solves horizontal scrolling bug

--- a/Prototype/_sass/components/_section.scss
+++ b/Prototype/_sass/components/_section.scss
@@ -1,5 +1,6 @@
 section {
   min-height: 100%;
+  overflow-x: hidden;
 
   .container {
     max-width: 1100px;
